--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="HomeTitle">BiblioBook</string>
     <string name="researchButton">Rechercher</string>
     <string name="favButton">Favoris</string>
+    <string name="logoDescription">logo</string>
 </resources>
