Added result activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="placeholderSearch">Rechercher par titre ou auteur</string>
     <string name="humourToggleButton">Humour</string>
     <string name="drameToggleButton">Drame</string>
+    <string name="topBarSearchText"></string>
 </resources>
